update env example to include base url

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
 ADMIN_USERNAME=your_admin_username_here
 ADMIN_PASSWORD=your_admin_password_here
+BASE_URL=your_base_url_here
